--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -150,10 +150,22 @@ a {
 }
 
 .client .images {
-  margin-top: 96px;
+  margin-top: 70px;
   display: flex;
   justify-content: space-between;
   align-items: center;
+}
+
+.client .images a {
+  height: 90px;
+  display: flex;
+  align-items: center;
+  padding: 0 42px;
+  border-radius: 12px;
+}
+
+.client .images a:hover {
+  box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.1);
 }
 
 /* Guides */
