--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -606,6 +606,11 @@ a {
   justify-content: center;
   align-items: center;
   border-radius: 4px;
+  background: #F9F9F9;
+}
+
+.footer .social-link + .social-link {
+  margin-left: 16px;
 }
 
 .footer .social-link:hover {
