--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,6 +10,11 @@ html {
   font-size: 62.5%;
 }
 
+html,
+body {
+  scroll-behavior: smooth;
+}
+
 body {
   font-size: 1.6rem;
   font-family: "Poppins", sans-serif;
@@ -53,14 +58,6 @@ a {
   z-index: 1;
 }
 
-.hero-wrap {
-  display: flex;
-  flex-direction: column;
-  position: relative;
-  background-color: #e6f0ff;
-  height: 100vh;
-}
-
 .navbar {
   display: flex;
   align-items: center;
@@ -95,20 +92,30 @@ a {
   font-size: 1.4rem;
   font-weight: 500;
 }
-.hero {
-  margin-top: 130px;
+
+.hero-wrap {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  position: relative;
+  background-color: #e6f0ff;
+  height: calc(100vh - 88px);
 }
-.hero .info {
+
+
+.hero-wrap .info {
   width: 51%;
 }
-.hero .sub-title {
+
+.hero-wrap .sub-title {
   color: #687690;
   font-size: 1.8rem;
   font-weight: 500;
   letter-spacing: 0.01em;
   line-height: normal;
 }
-.hero .title {
+
+.hero-wrap .title {
   color: #000336;
   font-size: 6.4rem;
   font-style: normal;
@@ -116,7 +123,8 @@ a {
   line-height: 118.75%;
   margin-top: 8px;
 }
-.hero .desc {
+
+.hero-wrap .desc {
   margin-top: 30px;
   color: #5a6473;
   font-size: 1.8rem;
@@ -124,12 +132,13 @@ a {
   line-height: 177.778%;
   text-transform: capitalize;
 }
-.hero .hero-cta {
+
+.hero-wrap .hero-cta {
   min-width: 170px;
   margin-top: 40px;
 }
 
-.hero .hero-img {
+.hero-wrap .hero-img {
   position: absolute;
   bottom: 0;
   right: calc((100vw - 1110px) / 2 - 100px);
