--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -52,7 +52,7 @@ a {
 
 .fixed-header {
   background: #e6f0ff;
-  padding-top: 26px;
+  padding: 26px 0 0;
   position: sticky;
   top: -26px;
   z-index: 1;
@@ -315,7 +315,8 @@ a {
 }
 
 .featured .list {
-  display: flex;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
   gap: 30px;
   margin-top: 70px;
 }
