--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -123,7 +123,7 @@
     display: grid;
     grid-template-columns: 1fr 2fr;
     row-gap: 80px;
-    
+
   }
 }
 /* Tablet */
@@ -139,5 +139,20 @@
   }
   .action {
     display: none;
+  }
+  .hero-wrap .info {
+    width: 90%;
+  }
+  .hero-wrap .sub-title {
+    font-size: 1.5rem;
+    font-weight: 400;
+  }
+  .hero-wrap .title{
+        font-size: 5.9rem;
+    font-weight: 600;
+  }
+  .hero-wrap .desc {
+    font-size: 1.5rem;
+    font-weight: 400;
   }
 }
