--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -119,21 +119,23 @@
   .subscription .image {
     display: none;
   }
-  .footer .row-top{
+  .footer .row-top {
     display: grid;
     grid-template-columns: 1fr 2fr;
     row-gap: 80px;
-
   }
 }
 /* Tablet */
 @media screen and (min-width: 768px) and (max-width: 991px) {
-  .nav-item-link--show-on-mobile {
+  .show-on-mobile {
     display: none !important;
   }
 }
 /* Mobile */
 @media screen and (max-width: 767px) {
+  .hide-on-mobile {
+    display: none !important;
+  }
   .menu-drawer {
     inset: 0 25% 0 0;
   }
@@ -147,12 +149,66 @@
     font-size: 1.5rem;
     font-weight: 400;
   }
-  .hero-wrap .title{
-        font-size: 5.9rem;
+  .hero-wrap .title {
+    font-size: 5.9rem;
     font-weight: 600;
   }
   .hero-wrap .desc {
     font-size: 1.5rem;
     font-weight: 400;
+  }
+  .client .images {
+    row-gap: 20px;
+  }
+  .list-guide {
+    margin-top: 50px;
+    flex-direction: column;
+    row-gap: 20px;
+  }
+  .featured .list {
+    grid-template-columns: 1fr;
+  }
+  .featured-cta {
+    display: flex;
+    justify-content: center;
+    margin-top: 50px;
+  }
+  .stats .sub-title {
+    width: 100%;
+  }
+  .stats .img-block .images {
+    width: calc(100% - 20px);
+    margin-left: 20px;
+  }
+  .stats .stats-trend {
+    padding: 20px 10px;
+  }
+  .stats-trend .row{
+    flex-direction: row;
+  }
+  .stats-trend .separate{
+    margin-top: 15px;
+  }
+  .stats .row-qty{
+    margin-top: 40px;
+  }
+  .stats .row-qty{
+    flex-direction: column;
+    align-items: center;
+    row-gap: 20px;
+  }
+  .stats .qty-desc{
+    margin-top: 15px;
+  }
+  .subscription .info{
+    padding: 0 32px;
+  }
+  .footer .row-top{
+    column-gap: 50px;
+  }
+  .footer .row-bottom{
+    flex-direction: column;
+    align-items: flex-start;
+    row-gap: 20px;
   }
 }
