--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -142,6 +142,9 @@
   .action {
     display: none;
   }
+  .hero-wrap {
+    height: calc(100vh - 80px);
+  }
   .hero-wrap .info {
     width: 90%;
   }
@@ -183,30 +186,30 @@
   .stats .stats-trend {
     padding: 20px 10px;
   }
-  .stats-trend .row{
+  .stats-trend .row {
     flex-direction: row;
   }
-  .stats-trend .separate{
+  .stats-trend .separate {
     margin-top: 15px;
   }
-  .stats .row-qty{
+  .stats .row-qty {
     margin-top: 40px;
   }
-  .stats .row-qty{
+  .stats .row-qty {
     flex-direction: column;
     align-items: center;
     row-gap: 20px;
   }
-  .stats .qty-desc{
+  .stats .qty-desc {
     margin-top: 15px;
   }
-  .subscription .info{
+  .subscription .info {
     padding: 0 32px;
   }
-  .footer .row-top{
+  .footer .row-top {
     column-gap: 50px;
   }
-  .footer .row-bottom{
+  .footer .row-bottom {
     flex-direction: column;
     align-items: flex-start;
     row-gap: 20px;
